Custom login screen, introduce index and autogenerated id for IDistribution

--- a/admin-assets/css/login.css
+++ b/admin-assets/css/login.css
@@ -2,10 +2,10 @@
   color: white;
   font-size: larger;
   font-weight: bolder;
-  content: "SEIZE ADMIN";
+  content: "SEIZE.IO ADMIN";
 }
 
-.dVcRoa {
+.jlLIlY img {
   display: none;
 }
 
@@ -14,7 +14,7 @@
 }
 
 .dpZFvg,
-.fGZBrW {
+.fuZoeI {
   display: flex;
   align-items: center;
   justify-content: center;
