--- a/admin-assets/css/style.css
+++ b/admin-assets/css/style.css
@@ -14,6 +14,13 @@
   box-shadow: 0 1px 6px 0 rgb(137 138 154 / 40%);
 }
 
+.uploadDistributionDropdown {
+  line-height: 20px;
+  padding: 5px 10px;
+  width: 45%;
+  margin-bottom: 25px;
+}
+
 .uploadDistributionInput {
   line-height: 20px;
   padding: 5px 10px;
